--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@lottiefiles/dotlottie-react": "^0.17.5",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.4.0",
+    "@react-three/rapier": "^2.1.0",
     "@tailwindcss/vite": "^4.1.16",
     "lucide-react": "^0.548.0",
     "react": "^19.1.1",
